# Embedder

./: .gitignore  README.md  pyproject.toml  requirements.txt
embedder/: __init__.py  cli.py  pipeline.py
embedder/models/: __init__.py  base.py  clip_model.py  convnextv2.py  dinov2.py  efficientnetv2.py  siglip.py  timm_model.py
tests/: test_embedder.py
