[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedder"
version = "0.1.0"
description = "Image embeddings from SOTA CV models (DINOv2, CLIP, SigLIP)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "transformers>=4.40",
    "Pillow>=10.0",
    "numpy>=1.24",
    "accelerate>=0.27",
    "timm>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
embedder = "embedder.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["embedder*"]
